:bug: Input Censorship Text > Fix visibility

--- a/components/InputCensorshipText/style.scss
+++ b/components/InputCensorshipText/style.scss
@@ -1,5 +1,6 @@
 .input-censorship-text {
     opacity: 0;
+    visibility: hidden;
 
     font-size: rem(21px);
 
